--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "app"
+name = "examples"
 version = "0.1.0"
 authors = ["Justin Mimbs <justin.mimbs@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+rand = "0.7"
+rand_pcg = "0.2"
 wasm-bindgen = "0.2.55"
 asteroids = { path = "../asteroids" }
+app = { path = "../app" }
 
 [lib]
-crate-type = ["lib", "cdylib"]
+crate-type = ["cdylib"]
